--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body class="<%= params[:action] %>">
+    <%= link_to "English", url_for(locale: 'en') %> |
+    <%= link_to "日本語", url_for(locale: 'ja') %>
+   
     <%= yield %>
   </body>
 </html>
