--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body class="<%= params[:action] %>">
+    <% if params[:controller] == 'books' %>
+      <%= link_to 'My Profile', user_path(current_user) %>
+      <%= link_to 'Users', users_path %>
+    <% end %>
     <% if user_signed_in? %>
       <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete } %>
     <% end %>
