--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,15 @@
 <h1>Profile</h1>
 
-<p>
-  <strong>Email:</strong> <%= @user.email %>
-</p>
+<div class="show-item">
+  <%= render @user %>
+</div>
 
-<p>
-  <strong>Address:</strong> <%= @user.address %>
-</p>
+<nav class="page-nav">
+  <%= link_to 'Back to Users', users_path %>
+  <%= link_to 'Back to Books', books_path %>
 
-<p>
-  <strong>Post Code:</strong> <%= @user.post_code %>
-</p>
+  <% if current_user == @user %>
+    <%= link_to 'Edit', edit_user_registration_path %>
+  <% end %>
+</nav>
 
-<p>
-  <strong>Introduction:</strong> <%= @user.introduction %>
-</p>
-
-<%= link_to 'Back to Users', users_path %>
