--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,18 +1,18 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Books</h1>
+<h1><%= t('models.book.header.books_index') %></h1>
 
 <div id="books" class="index-items">
   <% @books.each do |book| %>
     <div class="index-item">
       <%= render book %>
       <p>
-        <%= link_to "Show this book", book %>
+        <%= link_to t('models.book.link.show_this_book'), book %>
       </p>
     </div>
   <% end %>
 </div>
 
 <nav class="page-nav">
-  <%= link_to "New book", new_book_path %>
+  <%= link_to t('models.book.link.new_book'), new_book_path %>
 </nav>
