--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
 
   <body class="<%= params[:action] %>">
     <% if params[:controller] == 'books' %>
-      <%= link_to 'My Profile', user_path(current_user) %>
-      <%= link_to 'Users', users_path %>
+      <%= link_to t('models.user.link.my_profile'), user_path(current_user) %>
+      <%= link_to t('models.user.link.users'), users_path %>
     <% end %>
     <% if user_signed_in? %>
-      <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete } %>
+      <%= link_to t('models.user.link.logout'), destroy_user_session_path, data: { turbo_method: :delete } %>
     <% end %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
