--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,6 +13,8 @@
   <% end %>
 </div>
 
+<%= paginate @books %>
+
 <nav class="page-nav">
   <%= link_to t('models.book.link.new_book'), new_book_path %>
 </nav>
