--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <% if user_signed_in? %>
       <%= link_to t('models.user.link.logout'), destroy_user_session_path, data: { turbo_method: :delete } %>
     <% end %>
-    <p class="notice"><%= notice %></p>
+    <%# <p class="notice"><%= notice %1></p> %>
     <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
