--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,13 @@
-<h1>Users#index</h1>
+<h1>Users</h1>
 <ul>
   <% @users.each do |user| %>
     <li>
       <%= link_to user.email, user_path(user) %>
     </li>
+
+    <% if user.image.attached? %>
+      <p>Icon:</p>
+      <%= image_tag user.image.variant(resize_to_limit: [100, 100]) %>
+    <% end %>
   <% end %>
 </ul>
