--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,9 +1,9 @@
-<h1><%= t('models.book.header.new_book') %></h1>
+<h1><%= t('.header') %></h1>
 
 <%= render "form", book: @book %>
 
 <br>
 
 <nav class="page-nav">
-  <%= link_to t('models.book.link.back_to_books'), books_path %>
+  <%= link_to t('.link'), books_path %>
 </nav>
