--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('models.user.header.sign_up') %></h2>
+<h2><%= t('.header') %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -11,7 +11,7 @@
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-      <em><%= t('models.user.note.characters_minimum', count: @minimum_password_length) %></em>
+      <em><%= t('devise.characters_minimum', count: @minimum_password_length) %></em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
@@ -37,7 +37,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit t('models.user.button.sign_up') %>
+    <%= f.submit t('.button') %>
   </div>
 <% end %>
 
