--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1><%= t('.header') %></h1>
 
-<div id="books" class="index-items">
+<div id="users" class="index-items">
   <% @books.each do |book| %>
     <div class="index-item">
       <%= render book %>
       <p>
-        <%= link_to t('models.book.link.show_this_book'), book %>
+        <%= link_to t('.links.show_book'), book %>
       </p>
     </div>
   <% end %>
@@ -16,5 +16,5 @@
 <%= paginate @books %>
 
 <nav class="page-nav">
-  <%= link_to t('.link'), new_book_path %>
+  <%= link_to t('.links.add_book'), new_book_path %>
 </nav>
