--- a/app/views/devise/registrations/_profile_fields.html.erb
+++ b/app/views/devise/registrations/_profile_fields.html.erb
@@ -21,7 +21,7 @@
 <% if current_user.image.attached? %>
   <div class="field">
     <p>Image:</p>
-    <%= image_tag current_user.image %>
+    <%= image_tag current_user.image.variant(resize_to_limit: [100, 100]) %>
   </div>
 <% end %>
 
