--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,21 +11,22 @@
   <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
 
-
-<h2>Comments</h2>
+<h2><%= t('views.common.title_index', name: Comment.model_name.human) %></h2>
 <% if @book.comments.present? %>
   <% @book.comments.each do |comment| %>
+    <strong><%= Comment.human_attribute_name(:title) %>:</strong>
     <p><%= comment.title %></p>
+    <strong><%= Comment.human_attribute_name(:body) %>:</strong>
     <p><%= comment.body %></p>
     <p>Posted by <%= comment.user.name || comment.user.email %></p>
     <% if comment.user == current_user %>
-      <%= link_to 'Edit', edit_book_comment_path(@book, comment) %> |
-      <%= button_to 'Delete', [@book, comment], method: :delete, data: {confirm: 'Are you sure?'} %>
+      <%= link_to t('views.common.edit', name: Book.model_name.human.downcase), edit_report_comment_path(@book, comment) %>
+      <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), [@book, comment], method: :delete %>
     <% end %>
   <% end %>
 <% else %>
   <p>コメントはまだありません。</p>
 <% end %>
 
-<h3>Add a Comment</h3>
+<h3><%= t('views.common.post', name: Comment.model_name.human) %></h3>
 <%= render 'comments/form', commentable: @book, comment: Comment.new %>
