--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this report", @report %>
-  <%= link_to "Back to reports", reports_path %>
+  <%= link_to t('views.common.show', name: Report.model_name.human.downcase), report_path(@report) %>
+  <%= link_to t('views.common.title_index', name: Report.model_name.human.downcase), reports_path %>
 </div>
