--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New Report</h1>
+<h1><%= t('views.common.title_new', name: Report.model_name.human) %></h1>
 
 <%= render "form", report: @report %>
 
 <br>
 
 <div>
-  <%= link_to "Back to books", books_path %>
+  <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
 </div>
