--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -19,8 +19,8 @@
     <p><%= comment.body %></p>
     <p>Posted by <%= comment.user.name || comment.user.email %></p>
     <% if comment.user == current_user %>
-      <%= link_to t('views.common.edit', name: Report.model_name.human.downcase), edit_report_comment_path(@report, comment) %>
-      <%= button_to t('views.common.destroy', name: Report.model_name.human.downcase), [@report, comment], method: :delete %>
+      <%= link_to t('views.common.edit', name: Comment.model_name.human.downcase), edit_report_comment_path(@report, comment) %>
+      <%= button_to t('views.common.destroy', name: Comment.model_name.human.downcase), [@report, comment], method: :delete %>
     <% end %>
   <% end %>
 <% else %>
