--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,8 +1,10 @@
 <h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
 
-<%= render @report %>
+<div class="show-item">
+  <%= render @report %>
+</div>
 
-<div>
+<div class="page-nav">
   <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
   <% if @report.user == current_user %>
     <%= link_to t('views.common.edit', name: Report.model_name.human.downcase), edit_report_path(@report) %>
@@ -10,22 +12,28 @@
   <% end %>
 </div>
 
-<h2><%= t('views.common.title_index', name: Comment.model_name.human) %></h2>
-<% if @report.comments.present? %>
-  <% @report.comments.each do |comment| %>
-    <strong><%= Comment.human_attribute_name(:title) %>:</strong>
-    <p><%= comment.title %></p>
-    <strong><%= Comment.human_attribute_name(:body) %>:</strong>
-    <p><%= comment.body %></p>
-    <p>Posted by <%= comment.user.name || comment.user.email %></p>
-    <% if comment.user == current_user %>
-      <%= link_to t('views.common.edit', name: Comment.model_name.human.downcase), edit_report_comment_path(@report, comment) %>
-      <%= button_to t('views.common.destroy', name: Comment.model_name.human.downcase), [@report, comment], method: :delete %>
+<div id="comment" class="index-item">
+  <h2><%= t('views.common.title_index', name: Comment.model_name.human) %></h2>
+  <% if @report.comments.present? %>
+    <% @report.comments.each do |comment| %>
+      <div class="index-item">
+        <strong><%= Comment.human_attribute_name(:title) %>:</strong>
+        <p><%= comment.title %></p>
+        <strong><%= Comment.human_attribute_name(:body) %>:</strong>
+        <p><%= comment.body %></p>
+        <p>Posted by <%= comment.user.name || comment.user.email %></p>
+        <% if comment.user == current_user %>
+          <nav class="page-nav">
+          <%= link_to t('views.common.edit', name: Comment.model_name.human.downcase), edit_report_comment_path(@report, comment) %>
+          <%= button_to t('views.common.destroy', name: Comment.model_name.human.downcase), [@report, comment], method: :delete %>
+          </nav>
+        <% end %>
+      </div>
     <% end %>
+  <% else %>
+    <p>コメントはまだありません</p>
   <% end %>
-<% else %>
-  <p>コメントはまだありません</p>
-<% end %>
+</div>
 
 <h3><%= t('views.common.post', name: Comment.model_name.human) %></h3>
 <%= render 'comments/form', commentable: @report, comment: Comment.new %>
