--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,8 +23,8 @@
         <p>Posted by <%= comment.user.name || comment.user.email %></p>
         <% if comment.user == current_user %>
           <nav class="page-nav">
-            <%= link_to t('views.common.edit', name: Book.model_name.human.downcase), edit_report_comment_path(@book, comment) %>
-            <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), [@book, comment], method: :delete %>
+            <%= link_to t('views.common.edit', name: Comment.model_name.human.downcase), edit_book_comment_path(@book, comment) %>
+            <%= button_to t('views.common.destroy', name: Comment.model_name.human.downcase), [@book, comment], method: :delete %>
           </nav>
         <% end %>
       </div>
