--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 </div>
 
-<div id="comment" class="index-item">
+<div class="index-item">
   <h2><%= t('views.common.title_index', name: Comment.model_name.human) %></h2>
   <% if @report.comments.present? %>
     <% @report.comments.each do |comment| %>
