Book/Report詳細ページのコメント表示コードをcomments/_comments.html.erbに切り出して共通化

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,13 +1,6 @@
 <%= form_with(model: report) do |form| %>
-  <% if report.errors.any? %>
-    <h2><%= pluralize(report.errors.count, "error") %> prohibited this report from being saved:</h2>
 
-    <ul>
-      <% report.errors.each do |error| %>
-        <li><%= error.full_message %></li>
-      <% end %>
-    </ul>
-  <% end %>
+<%= render 'errors/error_messages', model: report %>
 
   <div>
     <%= form.label :title, style: "display: block" %>
