--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,14 +1,6 @@
 <%= form_with(model: book) do |form| %>
-  <% if book.errors.any? %>
-    <h2><%= t('views.common.validation_error', errors: i18n_error_count(book.errors.count), name: Book.model_name.human.downcase) %>:</h2>
 
-      <ul>
-        <% book.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<% render 'errors/error_messages', model: book %>
 
   <div>
     <%= form.label :title, style: "display: block" %>
