--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,14 +2,12 @@
 
   <div>
     <%= form.label :title %>
-    <%# <%= form.text_field :title, required: true %1> %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, required: true %>
   </div>
 
   <div>
     <%= form.label :body %>
-    <%# <%= form.text_area :body, required: true %1> %>
-    <%= form.text_area :body %>
+    <%= form.text_area :body, required: true %>
   </div>
 
   <div>
