--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -9,7 +9,7 @@
 <% if @report.mentioned_reports.any? %>
   <p><strong>この日報は以下の日報からリンクされています:</strong></p>
   <% @report.mentioned_reports.each do |mentioned_report| %>
-    <p><strong><%= mentioned_report.title %></strong>からリンクされています
+    <p><strong><a href='http://localhost:3000/reports/<%= mentioned_report.id %>' target='_blank'\><%= mentioned_report.title %></a></strong>からリンクされています
     <%= time_ago_in_words(mentioned_report.created_at) %>前</p>
   <% end %>
 <% end %>
