--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -3,12 +3,12 @@
 <%= render 'errors/error_messages', model: report %>
 
   <div>
-    <%= form.label :title, style: "display: block" %>
+    <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
 
   <div>
-    <%= form.label :body, style: "display: block" %>
+    <%= form.label :body %>
     <%= form.text_area :body %>
   </div>
 
