reports_controllerのcreate、updateメソッドにTransaction処理を追加

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -2,12 +2,12 @@
   <%= render 'shared/validation_errors', resource: report %>
 
   <div>
-    <%= form.label :title, style: "display: block" %>
+    <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
 
   <div>
-    <%= form.label :content, style: "display: block" %>
+    <%= form.label :content %>
     <%= form.text_area :content %>
   </div>
 
